# Cradler

./: .env.example  .gitattributes  .gitignore  .mcp.json  BENCHMARKS.md  CLAUDE.md  FINDINGS.md  HANDOFF.md  LICENSE  OPTIMIZED_DESIGN.md  README.md  docker-compose.yml  test_generation.py
backend/: .gitignore  main.py  migrate.py  pyproject.toml  requirements.txt  test_context7.py
backend/agents/mcp/: __init__.py  browser_control.py  context7_client.py  dom_analysis.py  file_system.py  network_analysis.py  tools_manager.py
backend/agents/primary/: agent.py
backend/agents/secondary/: agent.py
backend/alembic/: README.md  env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_cascade_deletes.py
backend/api/admin/: __init__.py
backend/api/auth/: __init__.py  dependencies.py  schemas.py
backend/api/chat/: __init__.py  schemas.py
backend/api/data/: __init__.py
backend/api/scrapers/: __init__.py  schemas.py
backend/core/: config.py  security.py
backend/core/database/: connection.py  models.py
backend/core/storage/: __init__.py  minio_client.py
backend/corpus_rendered/allbirds/: detail.html  detail.meta.json  listing.html  listing.meta.json
backend/corpus_rendered/barefootbuttons/: detail.html  detail.meta.json  listing.html  listing.meta.json
backend/corpus_rendered/beardbrand/: detail.html  detail.meta.json  listing.html  listing.meta.json
backend/corpus_rendered/bigcommerce-demo/: detail.html  detail.meta.json  listing.html  listing.meta.json
backend/scrapers/: .gitignore
backend/scripts/: fetch_corpus.py
docs/: FABLE5~1.MD  (+11 more)
(+111 files in other folders)
